blogs.css
/* 
.container {
  padding: 2px 16px;
  background-color: #C0C0C0;
}

.column {
  float: left;
  width: 33%;
  padding: 10px;
 
}

.row:after {
  content: "";
  display: table;
  clear: both;
}
* {
  box-sizing: border-box;
  
} */
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  
}
.grid-container {
  display: grid;
  padding: 2.5rem;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  grid-gap: 1rem;
  /* place-content: center; */
  /* align-items: center;
  justify-content: center; */
}
.card-img-top{
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.card-body > h5{
    font-weight: bold;
    color: rgb(8, 8, 8);
    
}
.card{
  height: 510px;
  padding:2%;
  margin:3%;
  border:none;
  background-color: #9D5C0D ;
}
.card-body{
  align-items: center;
  
}
.card:hover{
  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.24),0 17px 50px 0 rgba(0, 0, 0, 0.19);
}
.card-img-top:hover {
  box-shadow: 0 0.25em 0.25em -0.1em #604717;
    box-shadow: 0 0.30em 0.30em -0.1em #f7c603;
    border-color: #e0ef08 ;
    transition: 0.4s;
    color: #d8eb08 ;
}
.card:hover {
  box-shadow: 0 0.25em 0.25em -0.1em #eb9e22;
    box-shadow: 0 0.25em 0.25em -0.1em #b5c952;
    transform: translateY(-1.75em);
    border-color: #FFB84C;
    transition: 0.4s;
    color: #fff ;
    text-decoration:wavy;
  
}
.card h5:hover {
    color: black ;
}
.card a{
    background-color: #B70404 ;
    color:white;
    padding:2%;
    border:1px black;
    cursor: pointer; 
    text-decoration: none;
    
}
.card a:hover{
  background-color:inherit ;
  color: #FFA931;
  border:3px solid;
}

.footer-wrapper {
  text-align: center;
  padding: 1rem;
  /* background-color: #995734	; */
  color: white;
}
#topBtn {
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 9;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.5s ease-in-out;
}

#topBtn a:hover {
  background: #F0FFC2;
  transform-origin: center center;
}

#topBtn a span:hover {
  background: #ca995d;
  color: #362706;
  transform-origin: center center;
}

#topBtn a {
  display: block;
  text-align: center;
  height: 40px;
  width: 38px;
  background: #9D5C0D;
  border-radius: 15px;
  cursor: pointer;
}

#topBtn a span {
  color: #EEEEEE;
  width: 38px;
  border-radius: 15px;
  line-height: 39px;
  text-decoration: none;
  font-size: 32px;
}

